force-app/main/default/objects/rstk__poitemvend__c/fields/FMG_Item_Image__c.field-meta.xml
<CustomField>
    <fullName>FMG_Item_Image__c</fullName>
    <description>Item Image</description>
    <formula>IMAGE( FMG_Item_Image_URL__c , &quot;Item Image&quot;)</formula>
    <inlineHelpText>Item Image</inlineHelpText>
    <label>Item Image</label>
    <type>Text</type>
</CustomField>