force-app/main/default/objects/rstk__poitemvend__c/fields/FMG_Item_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>FMG_Item_Image_URL__c</fullName>
    <description>URL for Item Image</description>
    <inlineHelpText>URL for Item Image</inlineHelpText>
    <label>Item Image URL</label>
    <type>Url</type>
</CustomField>