force-app/main/default/objects/rstk__poitemvend__c/fields/FMG_Vendor_s_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>FMG_Vendor_s_Item_Description__c</fullName>
    <description>Extended description for Vendor</description>
    <inlineHelpText>Extended description for Vendor</inlineHelpText>
    <label>Vendor&apos;s Item Description</label>
    <type>TextArea</type>
</CustomField>